[CHANGED] Fixed Flex Wrap

--- a/app/client/src/scss/layout/Events.scss
+++ b/app/client/src/scss/layout/Events.scss
@@ -26,6 +26,7 @@
                     margin: 10px auto 20px;
                     justify-content: center;
                     align-items: center;
+                    flex-wrap: wrap;
                 }
 
                 &.selected{
